--- a/templates/index.html
+++ b/templates/index.html
@@ -117,15 +117,10 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-                {% for i in range(8) %}
+                {% for i in files %}
                 <div id="{{i}}" class="col">
                     <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#55595c"/>
-                            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                        </svg>
+                        <img class="card-img-top" src="{{ url_for('static', filename='uploads/'+i+'/sementic.jpg') }}" alt="{{i}}">
 
                         <div class="card-body">
                             <p class="card-text">This is a wider card with supporting text below as a natural
