--- a/templates/template.html
+++ b/templates/template.html
@@ -42,8 +42,7 @@
     <div class="sidenav-header">
         <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
            aria-hidden="true" id="iconSidenav"></i>
-        <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html "
-           target="_blank">
+        <a class="navbar-brand m-0" href=" {{ url_for('index') }} ">
             <img src="{{ url_for('static', filename='assets/img/logo-ct-dark.png')}}" class="navbar-brand-img h-100"
                  alt="main_logo">
             <span class="ms-1 font-weight-bold">Soft UI Dashboard</span>
@@ -144,7 +143,7 @@
                     <ul class="navbar-nav  justify-content-end">
                         <li class="nav-item d-flex align-items-center">
                             <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank"
-                               href="https://www.creative-tim.com/builder/soft-ui?ref=navbar-dashboard">RUN</a>
+                               href="{{ url_for('uploadfile') }}">RUN</a>
                         </li>
                         <!--                        <li class="nav-item d-xl-none ps-3 d-flex align-items-center">-->
                         <!--                            <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">-->
@@ -483,6 +482,7 @@
 <script async defer src="https://buttons.github.io/buttons.js')}}"></script>
 <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
 <script src="{{ url_for('static', filename='assets/js/soft-ui-dashboard.min.js')}}?v=1.0.6"></script>
+{% block js %} {% endblock %}
 </body>
 
 </html>
