:art: Update UI

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 {% block breadcrumb %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a>
+        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="{{ url_for('index') }}">Pages</a>
         </li>
         <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Upload</li>
     </ol>
@@ -26,9 +26,12 @@
 
             <div class="d-flex justify-content-center">
                 <input type="submit" value="Submit" id="sub" class="btn btn-info">
-                <div class="spinner-border text-info" id="loading" style="display:none;" role="status">
-                    <span class="sr-only"></span>
-                </div>
+                <h4 class=" text-info" id="loading" style="display:none;" role="status">
+
+                    <span class=" spinner-border sr-only"></span> Processing . . .
+
+                </h4>
+
             </div>
 
 
@@ -49,7 +52,7 @@
 </div>
 {% if filename %}
 <div class="row mt-4">
-    <h4>Result : {% if logo %} Car brand   <span class="badge bg-primary">{{logo}}</span> {% endif %}</h4>
+    <h4>Result : {% if logo %} Car brand <span class="badge bg-primary">{{logo}}</span> {% endif %}</h4>
     {% for i in ['logo','original','sementic','mask'] %}
     <div class="col-md-3 mt-4">
         <div class="card">
@@ -89,6 +92,7 @@ function loading(){
     document.getElementById('sub').style.display = "none";
     document.getElementById('loading').style.display = "block";
 }
+
 
 </script>
 {% endblock %}
