--- a/templates/Home.html
+++ b/templates/Home.html
@@ -21,8 +21,8 @@
     <div class="col-12 mt-4">
         <div class="card mb-4">
             <div class="card-header pb-0 p-3">
-                <h6 class="mb-1">Gallery {{j}}</h6>
-                <p class="text-sm">Segmented image</p>
+                <h3 class="mb-1">Gallery {{j.replace('-','/')}}</h3>
+                <p class="text-sm">Detected Brand and Segmented image</p>
             </div>
             <div class="card-body p-3">
                 <div class="row">
