--- a/templates/template.html
+++ b/templates/template.html
@@ -142,8 +142,7 @@
                 <div class="ms-md-auto pe-md-3 d-flex align-items-center">
                     <ul class="navbar-nav  justify-content-end">
                         <li class="nav-item d-flex align-items-center">
-                            <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank"
-                               href="{{ url_for('uploadfile') }}">RUN</a>
+                            <a class="btn btn-outline-primary btn-sm mb-0 me-3" href="{{ url_for('uploadfile') }}">RUN</a>
                         </li>
                         <!--                        <li class="nav-item d-xl-none ps-3 d-flex align-items-center">-->
                         <!--                            <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">-->
