--- a/templates/Car.html
+++ b/templates/Car.html
@@ -22,6 +22,7 @@
 <h4>{% if data['logo'] %} Car Brand Detection <span class="badge bg-primary">{{data['logo'].split('/')[-1].split('.')[0]}}</span>
     {% endif %}</h4>
 <div class="row mt-4 justify-content-center">
+    {% if data['logo'] %}
     {% for i in ['logo'] %}
     <div class="col-md-8 mb-4">
         <div class="card">
@@ -44,6 +45,7 @@
         </div>
     </div>
     {% endfor %}
+    {% endif %}
     {% if data['logo'] %}
     <div class="col-md-4 mb-4">
         <div class="card">
